--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@redux-saga/core": "^1.1.3",
     "@reduxjs/toolkit": "^1.4.0",
     "@types/classnames": "^2.2.10",
+    "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
