Filter by level

--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@redux-saga/core": "^1.1.3",
     "@reduxjs/toolkit": "^1.4.0",
     "@types/classnames": "^2.2.10",
+    "@types/qs": "^6.9.4",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "lodash.debounce": "^4.0.8",
+    "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "^3.4.1",
     "react-toastify": "^6.0.8",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3"
   },
