--- a/package.json
+++ b/package.json
@@ -3,12 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.10.1",
-    "@material-ui/styles": "^4.10.0",
     "@redux-saga/core": "^1.1.3",
     "@reduxjs/toolkit": "^1.4.0",
-    "@types/classnames": "^2.2.10",
-    "@types/qs": "^6.9.4",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "lodash.debounce": "^4.0.8",
@@ -57,10 +53,12 @@
     "@types/jest": "^24.0.0",
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^12.0.0",
+    "@types/qs": "^6.9.4",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-transition-group": "^4.4.0",
     "@types/redux-logger": "^3.0.8",
     "@types/yup": "^0.29.3",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
